refactor(exception): 同步异常闭环与审批流程后端
包含8D/CAPA阶段控制、异常责任人、审批配置和异常服务回归校验。